tests/ui/rfcs/type-alias-impl-trait/higher-ranked-regions-gat.stderr
error[E0792]: expected generic lifetime parameter, found `'a`
  --> $DIR/higher-ranked-regions-gat.rs:19:5
   |
LL | pub type FooAssoc<'a> = impl Sized;
   |                   -- this generic parameter must be used with a generic lifetime parameter
...
LL |     Struct
   |     ^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0792`.
